--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,38 +1,39 @@
 .App {
+  padding: none;
+  margin: none;
+  top: 0;
+  width: 100%;
+  height: 100vh;
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+h1 {
   color: white;
 }
-
-.App-link {
-  color: #61dafb;
+.Lists {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: flex-start;
+  flex-wrap: wrap;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.newListButton{
+  all: none;
+  margin: 1rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  align-self: center;
+  cursor: pointer;
+  background: none;
+  border: 3px dashed white;
+  color: white;
+  font-size: 2rem;
+  width: 7.5rem;
+  height: 7.5rem;
+}
+.newListButton:hover{
+  transition: all .5s;
+  background: rgba(255, 255, 255, 0.2);
+  border: 3px solid white;
+  font-size: 2.25rem;
 }
