--- a/client/src/components/ToDoList/ToDoList.css
+++ b/client/src/components/ToDoList/ToDoList.css
@@ -9,11 +9,21 @@
     max-height: 35rem;
 }
 h3 {
+    display: flex;
     color: white;
+    
 }
 .listName{
     all: unset;
     color: white;
+    flex-grow: 1;
+    padding: .5rem 0;
+    border: 4px solid rgba(255, 255, 255, 0);
+    border-radius: 25px;
+}
+.listNameInput{
+    text-align: center;
+    flex-grow: 1;
     padding: .5rem 0;
     border: 4px solid rgba(255, 255, 255, 0);
     border-radius: 25px;
