--- a/client/src/App.css
+++ b/client/src/App.css
@@ -2,38 +2,13 @@
   padding: none;
   margin: none;
   top: 0;
+  bottom: 0;
   width: 100%;
   height: 100vh;
+  overflow: hidden;
   text-align: center;
 }
 h1 {
   color: white;
 }
-.Lists {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-evenly;
-  align-items: flex-start;
-  flex-wrap: wrap;
-}
-.newListButton{
-  all: none;
-  margin: 1rem;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  align-self: center;
-  cursor: pointer;
-  background: none;
-  border: 3px dashed white;
-  color: white;
-  font-size: 2rem;
-  width: 7.5rem;
-  height: 7.5rem;
-}
-.newListButton:hover{
-  transition: all .5s;
-  background: rgba(255, 255, 255, 0.2);
-  border: 3px solid white;
-  font-size: 2.25rem;
-}
+
