Client: Fixed newListButton Styles

--- a/client/src/components/UserLists/UserLists.scss
+++ b/client/src/components/UserLists/UserLists.scss
@@ -82,6 +82,9 @@
       font-size: 2rem;
       width: 2.5rem;
       height: 2.5rem;
+      line-height: 2.5rem;
+      position: absolute;
+      right: 5px;
     }
     .newListButton:hover{
       transition: all .5s;
